usefulprograms/errors.txt
ERROR:
execfile.c: In function ‘main’:
execfile.c:10:8: warning: missing terminating " character
 printf("dqwqwf
        ^
execfile.c:10:8: error: missing terminating " character
 printf("dqwqwf
        ^~~~~~~
execfile.c:11:1: error: expected expression before ‘}’ token
 }
 ^
execfile.c:10:8: error: expected ‘;’ before ‘}’ token
 printf("dqwqwf
        ^
        ;
 }
 ~       
